--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,8 @@ name: Build and Push Docker Image
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build-and-push:
@@ -11,20 +11,26 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: Extract version from tag
+        id: extract_version
+        run: echo "::set-output name=VERSION::${GITHUB_REF#refs/tags/}"
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
+        uses: docker/build-push-action@v5
+         with:
           context: .
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/markdown-to-pdf:latest
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/markdown-to-pdf:latest
+            ${{ secrets.DOCKER_USERNAME }}/markdown-to-pdf:${{ steps.extract_version.outputs.VERSION }}
